<resources>
    <string name="app_name">OrganicBox</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_login">Login</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign Up</string>
    <string name="et_usremail" />
    <string name="login_error_message">fill all fields</string>
    <string name="login_error_title">Login Error Occured</string>
    <string name="title_activity_signup">Signup</string>
    <string name="et_name">Name</string>
    <string name="et_passsign">password</string>
    <string name="et_emailsign">Email</string>
    <string name="et_dob">Date of Birth</string>
    <string name="signup_error_message">fill all fields correctly</string>
    <string name="signup_error_title">Signup Error Occured</string>
    <string name="logout_label">Logout</string>
    <string name="title_activity_single_item_view">Item</string>
    <string name="namelabel" />
    <string name="name" />
    <string name="date" />
    <string name="type" />
    <string name="status" />
    <string name="userview_main">List of Orders</string>
    <string name="ordernum" />
    <string name="ordernumlabel" />
    <string name="datelabel" />
    <string name="map_btn">Branches</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_new_order">New Order</string>
    <string name="et_searchbox" />
    <string name="wish_btn">Add to Favorites</string>
    <string name="addbasket_btn">Add to Basket</string>
    <string name="tv_outofstockalert" />
    <string name="title_activity_single_new_order_view">Item</string>
    <string name="title_activity_my_basket">My Basket</string>
    <string name="clear_btn">Clear Basket</string>
    <string name="checkout_btn">Checkout</string>
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="tv_check_billadd">Billing Address</string>
    <string name="tv_check_cardnum">Credit Card</string>
    <string name="btn_checkout_pay"><![CDATA[Validate & Pay]]></string>
    <string name="editText_billadd" />
    <string name="editText_creditcardnum" />
    <string name="editText_CVC" />
    <string name="btn_paybasket">QuickPay</string>
    <string name="wishlist_label">Favorites</string>
    <string name="refresh_label">Refresh</string>
    <string name="title_activity_wishlist">Favorites</string>
    <string name="clear_wishlist">Clear Favorites</string>
    <string name="action_clearfilter">Clear Filter</string>

    <string-array name="kg_keys">
        <item>2 KG</item>
        <item>5 KG</item>
        <item>10 KG</item>
        <item> 15 KG</item>
    </string-array>
    <string-array name="kg_values">
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="remember_not_title">Notifications</string>
    <string name="remember_not_summary">Show notifications for Shipped items</string>
    <string name="et_shipadd">Shipping Address</string>
    <string name="et_mobilenum">Mobile Number</string>
    <string name="checkout_error_message">Fill All fields</string>
    <string name="checkout_error_title">Invalid</string>


</resources>
