<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.b00047562.organicbox.SingleNewOrderView"
    tools:showIn="@layout/activity_single_new_order_view">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/name"
            android:id="@+id/tv_name_neworder"
            android:paddingTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/type"
            android:id="@+id/tv_type_neworder"
            android:paddingTop="5dp" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/img_neworder" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="28dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/addbasket_btn"
            android:id="@+id/addbasket_btn"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/wish_btn"
            android:id="@+id/addtowish_btn"
            android:layout_weight="1" />
    </LinearLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/spinner_packtype"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:spinnerMode="dialog"
        android:background="#dcedc8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Choose Pack Weight"
        android:id="@+id/textView_packtype_title"
        android:layout_above="@+id/spinner_packtype"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_outofstockalert"
        android:id="@+id/outofstockalert_tv"
        android:layout_above="@+id/textView_packtype_title"
        android:layout_centerHorizontal="true"
        android:textColor="#ff5252" />

</RelativeLayout>
