<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/namelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namelabel"
        android:textStyle="italic"
        android:textSize="25sp"
        android:textColor="#000000"
        android:typeface="monospace"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/namelabel"
        android:textStyle="italic"
        android:textSize="25sp"
        android:textColor="#000000"
        android:typeface="monospace"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/ordernumlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/namelabel"
        android:text="@string/ordernumlabel"
        android:textStyle="italic"
        android:textSize="25sp"
        android:textColor="#000000"
        android:typeface="monospace"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/ordernum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_toRightOf="@+id/ordernumlabel"
        android:textStyle="italic"
        android:textSize="25sp"
        android:textColor="#000000"
        android:typeface="monospace"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/datelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ordernumlabel"
        android:text="@string/datelabel"
        android:textStyle="italic"
        android:textSize="25sp"
        android:textColor="#000000"
        android:typeface="monospace"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ordernum"
        android:layout_toRightOf="@+id/datelabel"
        android:textStyle="italic"
        android:textSize="25sp"
        android:textColor="#000000"
        android:typeface="monospace"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:textStyle="italic"
        android:textSize="25sp"
        android:textColor="#000000"
        android:typeface="monospace"
        android:textIsSelectable="false" />

    <ImageView
        android:id="@+id/flag"
        android:layout_width="400dp"
        android:layout_height="180dp"
        android:layout_alignParentRight="true"
        android:background="#000000"
        android:padding="1dp"
        android:scaleType="fitXY"
        android:alpha="0.3" />

</RelativeLayout>


